Posting event when a setting is changed, with Map of changed keys and values

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
+  -->
+
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                   android:key="prefs_user">
 
     <!-- Show these to all users -->
     <PreferenceCategory
-        android:key="prefs_app"
         android:title="@string/preferences_app">
 
         <CheckBoxPreference
@@ -17,19 +20,19 @@
     </PreferenceCategory>
 
 <!--    <ListPreference
-        android:key="pref_lang"
+        android:key="lang"
         android:title="@string/pref_lang"
         android:summary="@string/pref_lang_summary"/>-->
 
 <!--    <CheckBoxPreference
-        android:key="pref_newwindow"
+        android:key="newwindow"
         android:title="@string/pref_newwindow"/>-->
 
     <PreferenceCategory
         android:title="media">
 
         <ListPreference
-            android:key="pref_media"
+            android:key="media"
             android:title="@string/pref_media"
             android:dialogTitle="@string/pref_media"
             android:summary="%s"
@@ -38,7 +41,7 @@
             android:defaultValue="subreddit"/> <!-- show thumbnails next to links -->
 
         <CheckBoxPreference
-            android:key="pref_no_profanity"
+            android:key="no_profanity"
             android:title="@string/pref_no_profanity"
             android:summary="@string/pref_no_profanity_summary"
             android:defaultValue="true"
@@ -51,44 +54,44 @@
         android:title="link options">
 
 <!--        <CheckBoxPreference
-            android:key="pref_organic"
+            android:key="organic"
             android:title="@string/pref_organic"/>--> <!-- show spotlight box on front page -->
 
 <!--        <CheckBoxPreference
-            android:key="pref_show_trending"
+            android:key="show_trending"
             android:title="@string/pref_show_trending"/>-->
 
 <!--        <CheckBoxPreference
-            android:key="pref_clickgadget"
+            android:key="clickgadget"
             android:title="@string/pref_clickgadget"/>-->
 
 <!--        <CheckBoxPreference
-            android:key="pref_compress"
+            android:key="compress"
             android:title="@string/pref_compress"/>-->
 
         <CheckBoxPreference
-            android:key="pref_domain_details"
+            android:key="domain_details"
             android:title="@string/pref_domain_details"
             android:defaultValue="false"/>
 
         <CheckBoxPreference
-            android:key="pref_hide_ups"
+            android:key="hide_ups"
             android:title="@string/pref_hide_ups"
             android:defaultValue="false"/>
 
         <CheckBoxPreference
-            android:key="pref_hide_downs"
+            android:key="hide_downs"
             android:title="@string/pref_hide_downs"
             android:defaultValue="false"/>
 
         <EditTextPreference
-            android:key="pref_numsites"
+            android:key="numsites"
             android:title="@string/pref_numsites"
             android:summary="%s"
             android:defaultValue="25"/>
 
         <EditTextPreference
-            android:key="pref_min_link_score"
+            android:key="min_link_score"
             android:title="@string/pref_min_link_score"
             android:defaultValue="-4"/>
 
@@ -98,7 +101,7 @@
         android:title="comment options">
 
         <ListPreference
-            android:key="pref_default_comment_sort"
+            android:key="default_comment_sort"
             android:title="@string/dialog_settings_default_comment_sort"
             android:dialogTitle="@string/dialog_settings_default_comment_sort"
             android:entries="@array/comment_sort_options"
@@ -107,21 +110,21 @@
             android:summary="%s" />
 
 <!--        <CheckBoxPreference
-            android:key="pref_ignore_suggested_sort"
+            android:key="ignore_suggested_sort"
             android:title="@string/pref_ignore_suggested_sort"/>-->
 
         <CheckBoxPreference
-            android:key="pref_highlight_controversial"
+            android:key="highlight_controversial"
             android:title="@string/pref_highlight_controversial"
             android:defaultValue="false"/>
 
         <EditTextPreference
-            android:key="pref_min_comment_score"
+            android:key="min_comment_score"
             android:title="@string/pref_min_comment_score"
             android:defaultValue="-4"/>
 
         <EditTextPreference
-            android:key="pref_num_comments"
+            android:key="num_comments"
             android:title="@string/pref_num_comments"
             android:summary="%s"
             android:defaultValue="200"/>
@@ -132,22 +135,22 @@
         android:title="messaging options">
 
         <CheckBoxPreference
-            android:key="pref_threaded_messages"
+            android:key="threaded_messages"
             android:title="@string/pref_threaded_messages"
             android:defaultValue="true"/>
 
         <CheckBoxPreference
-            android:key="pref_collapse_read_messages"
+            android:key="collapse_read_messages"
             android:title="@string/pref_collapse_read_messages"
             android:defaultValue="false"/>
 
         <CheckBoxPreference
-            android:key="pref_mark_messages_read"
+            android:key="mark_messages_read"
             android:title="@string/pref_mark_messages_read"
             android:defaultValue="true"/>
 
         <CheckBoxPreference
-            android:key="pref_monitor_mentions"
+            android:key="monitor_mentions"
             android:title="@string/pref_monitor_mentions"
             android:defaultValue="true"/>
 
@@ -157,16 +160,16 @@
         android:title="display options">
 
 <!--        <CheckBoxPreference
-            android:key="pref_enable_default_themes"
+            android:key="enable_default_themes"
             android:title="@string/pref_enable_default_themes"/>--> <!-- allow subreddits to show me custom themes -->
 
         <CheckBoxPreference
-            android:key="pref_show_flair"
+            android:key="show_flair"
             android:title="@string/pref_show_flair"
             android:defaultValue="true"/>
 
         <CheckBoxPreference
-            android:key="pref_show_link_flair"
+            android:key="show_link_flair"
             android:title="@string/pref_show_link_flair"
             android:defaultValue="true"/>
 
@@ -176,20 +179,20 @@
         android:title="content options">
 
         <CheckBoxPreference
-            android:key="pref_over_18"
+            android:key="over_18"
             android:title="@string/pref_over_18"
             android:summary="@string/pref_over_18_summary"
             android:defaultValue="false"/>
 
         <CheckBoxPreference
-            android:key="pref_label_nsfw"
+            android:key="label_nsfw"
             android:title="@string/pref_label_nsfw"
             android:summary="@string/pref_label_nsfw_summary"
             android:defaultValue="true"
             android:dependency="pref_no_profanity"/>
 
 <!--        <CheckBoxPreference
-            android:key="pref_private_feeds"
+            android:key="private_feeds"
             android:title="@string/pref_private_feeds"/>-->
 
     </PreferenceCategory>
@@ -198,24 +201,24 @@
         android:title="privacy options">
 
         <CheckBoxPreference
-            android:key="pref_public_votes"
+            android:key="public_votes"
             android:title="@string/pref_public_votes"
             android:defaultValue="false"/>
 
         <CheckBoxPreference
-            android:key="pref_research"
+            android:key="research"
             android:title="@string/pref_research"
             android:defaultValue="false"/>
 
         <CheckBoxPreference
-            android:key="pref_hide_from_robots"
+            android:key="hide_from_robots"
             android:title="@string/pref_hide_from_robots"
             android:defaultValue="false"/>
 
     </PreferenceCategory>
 
     <CheckBoxPreference
-        android:key="pref_beta"
+        android:key="beta"
         android:title="@string/pref_beta"
         android:defaultValue="false"/>
 
@@ -223,25 +226,25 @@
         android:title="gold options">
 
 <!--        <CheckBoxPreference
-            android:key="pref_hide_ads"
+            android:key="hide_ads"
             android:title="@string/pref_hide_ads"/>-->
 
         <CheckBoxPreference
-            android:key="pref_store_visits"
+            android:key="store_visits"
             android:title="@string/pref_store_visits"
             android:defaultValue="false"/>
 
 <!--        <CheckBoxPreference
-            android:key="pref_highlight_new_comments"
+            android:key="highlight_new_comments"
             android:title="@string/pref_highlight_new_comments"/>-->
 
         <CheckBoxPreference
-            android:key="pref_show_gold_expiration"
+            android:key="show_gold_expiration"
             android:title="@string/pref_show_gold_expiration"
             android:defaultValue="false"/>
 
         <CheckBoxPreference
-            android:key="pref_creddit_autorenew"
+            android:key="creddit_autorenew"
             android:title="@string/pref_creddit_autorenew"
             android:defaultValue="false"/>
 
@@ -249,21 +252,21 @@
 
     <!--
         <CheckBoxPreference
-            android:key="pref_email_messages"/>
+            android:key="email_messages"/>
 
         <CheckBoxPreference
-            android:key="pref_hide_locationbar"/>
+            android:key="hide_locationbar"/>
 
         <CheckBoxPreference
-            android:key="pref_show_promote"/>
+            android:key="show_promote"/>
 
         <CheckBoxPreference
-            android:key="pref_show_stylesheets"/>
+            android:key="show_stylesheets"/>
 
         <EditTextPreference
-            android:key="pref_theme_selector"/>
+            android:key="theme_selector"/>
 
         <CheckBoxPreference
-            android:key="pref_use_global_defaults"/>-->
+            android:key="use_global_defaults"/>-->
 
 </PreferenceScreen>
