Changed num links setting to be selections from a list

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -63,4 +63,11 @@
         <item>subreddit</item>
     </string-array>
 
+    <string-array name="pref_num_links_values">
+        <item>10</item>
+        <item>25</item>
+        <item>50</item>
+        <item>100</item>
+    </string-array>
+
 </resources>
