Refactored logic to prompt setting changes to update on server from any fragment

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
+  -->
+
 <resources>
 
     <!-- Base application theme. -->
@@ -14,7 +18,7 @@
         <item name="android:windowActionModeOverlay">true</item>
     </style>
 
-    <style name="ToolbarThemeLightText" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="ToolbarThemeLightText" parent="AppTheme">
         <item name="android:textColorPrimary">@color/icons</item>
         <item name="actionMenuTextColor">@color/icons</item>
         <item name="android:textColorSecondary">@color/icons</item>
