--- a/app/src/main/res/layout/comment_layout.xml
+++ b/app/src/main/res/layout/comment_layout.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
+  -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
@@ -109,7 +113,7 @@
 
     </FrameLayout>
 
-    <TextView
+    <com.ddiehl.android.htn.view.widgets.MarkdownTextView
         android:id="@+id/comment_body"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
