--- a/app/src/main/res/layout/fragment_markdown_text.xml
+++ b/app/src/main/res/layout/fragment_markdown_text.xml
@@ -11,7 +11,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin">
 
-    <TextView
+    <com.ddiehl.android.htn.view.widgets.MarkdownTextView
         android:id="@+id/about_app_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
