--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
+  -->
+
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -175,7 +179,7 @@
 
         </LinearLayout>
 
-        <TextView
+        <com.ddiehl.android.htn.view.widgets.MarkdownTextView
             android:id="@+id/link_self_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
