--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -48,5 +48,10 @@
     <dimen name="banner_ad_text_size">14sp</dimen>
     <dimen name="banner_ad_header_text_size">10sp</dimen>
     <dimen name="about_app_text_size">18sp</dimen>
+    <dimen name="user_profile_summary_karma_height">80dp</dimen>
+    <dimen name="user_karma_text_size">36sp</dimen>
+    <dimen name="user_karma_label_text_size">18sp</dimen>
+    <dimen name="user_note_label_text_size">12sp</dimen>
+    <dimen name="user_note_label_padding_start">6dp</dimen>
 
 </resources>
