--- a/app/src/main/res/layout/fragment_markdown_text.xml
+++ b/app/src/main/res/layout/fragment_markdown_text.xml
@@ -12,7 +12,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin">
 
     <com.ddiehl.android.htn.view.widgets.MarkdownTextView
-        android:id="@+id/about_app_text_view"
+        android:id="@+id/markdown_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/about_app_text_size"/>
