--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -48,6 +48,7 @@
     <dimen name="banner_ad_text_size">14sp</dimen>
     <dimen name="banner_ad_header_text_size">10sp</dimen>
     <dimen name="about_app_text_size">18sp</dimen>
+    <dimen name="user_created_text_size">16sp</dimen>
     <dimen name="user_karma_text_size">36sp</dimen>
     <dimen name="user_karma_label_text_size">16sp</dimen>
     <dimen name="user_note_label_text_size">12sp</dimen>
