--- a/app/src/main/res/layout/trophy_layout.xml
+++ b/app/src/main/res/layout/trophy_layout.xml
@@ -6,17 +6,17 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/trophy_icon"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_width="72dp"
+        android:layout_height="72dp"/>
 
     <TextView
         android:id="@+id/trophy_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
 </LinearLayout>
