--- a/app/src/main/res/layout/trophy_row.xml
+++ b/app/src/main/res/layout/trophy_row.xml
@@ -3,8 +3,7 @@
   ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
   -->
 
-<LinearLayout
+<TableRow
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"/>
